Częściowo spolszczona działająca wersja!

--- a/AplikacjaWebowa/Views/Cm/Details.cshtml
+++ b/AplikacjaWebowa/Views/Cm/Details.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Szczegóły</h2>
 
 <div>
-    <h4>Kontakty</h4>
+    <h4>Kontenery</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -62,5 +62,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.KontaktyId }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Powrót do listy", "Index")
 </p>
