--- a/AplikacjaWebowa/Views/Home/Contact.cshtml
+++ b/AplikacjaWebowa/Views/Home/Contact.cshtml
@@ -5,13 +5,9 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
-
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    Grzegorz Budzyn<br />
+    <abbr title="Mail"><strong>Mail: </strong></abbr>
+    <a href="mailto:hunterpl.grzesiu@gmail.com">hunterpl.grzesiu@gmail.com</a><br />
+    <abbr title="Tel"><strong>Tel: </strong></abbr>
+    722 214 246
 </address>
