--- a/AplikacjaWebowa/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/AplikacjaWebowa/Views/Account/ExternalLoginConfirmation.cshtml
@@ -3,13 +3,13 @@
     ViewBag.Title = "Register";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>Połącz się zaaa pomocą twojego konta @ViewBag.LoginProvider account.</h3>
+<h3>Połącz się za pomocą twojego konta @ViewBag.LoginProvider .</h3>
 
 @using (Html.BeginForm("ExternalLoginConfirmation", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
 
-    <h4>Formularz połączenia z socialmedia</h4>
+    <h4>Formularz połączenia z kontem socialmedia</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <p class="text-info">
