--- a/AplikacjaWebowa/Views/Account/VerifyCode.cshtml
+++ b/AplikacjaWebowa/Views/Account/VerifyCode.cshtml
@@ -9,7 +9,7 @@
     @Html.AntiForgeryToken()
     @Html.Hidden("provider", @Model.Provider)
     @Html.Hidden("rememberMe", @Model.RememberMe)
-    <h4>Enter verification code</h4>
+    <h4>Wprowadź kod do weryfikacji</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
