--- a/AplikacjaWebowa/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/AplikacjaWebowa/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,14 +1,14 @@
 ﻿@model AplikacjaWebowa.Models.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
-<h4>Use another service to log in.</h4>
+<h4>Użyj innej usługi do zalogowania</h4>
 <hr />
 @{
     var loginProviders = Context.GetOwinContext().Authentication.GetExternalAuthenticationTypes();
     if (loginProviders.Count() == 0) {
         <div>
             <p>
-                Istnieje możliwość skonfiguowania dostępu do social media. Jak zostanie czs to się tym zajmę. Link do poradnika dotyczącego implementacji <a href="http://go.microsoft.com/fwlink/?LinkId=403804">LINK</a>
+                Istnieje możliwość skonfigurowania dostępu do social media. Jak zostanie czs to się tym zajmę. Link do poradnika dotyczącego implementacji <a href="http://go.microsoft.com/fwlink/?LinkId=403804">LINK</a>
                 for details on setting up this ASP.NET application to support logging in via external services.
             </p>
         </div>
