--- a/AplikacjaWebowa/Views/Cm/Create.cshtml
+++ b/AplikacjaWebowa/Views/Cm/Create.cshtml
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Kontakty</h4>
+        <h4>Kontenery</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
