--- a/AplikacjaWebowa/Views/Cm/Delete.cshtml
+++ b/AplikacjaWebowa/Views/Cm/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Usuwanie</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Czy napewno chcesz usunąć wybrany element?</h3>
 <div>
     <h4>Kontakty</h4>
     <hr />
