--- a/AplikacjaWebowa/Views/Home/Index.cshtml
+++ b/AplikacjaWebowa/Views/Home/Index.cshtml
@@ -3,29 +3,30 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Witam</h1>
+    <p class="lead">Oto projekt aplikacji serwerowej obsługującej bazę danych. Cała aplikacja bazuję na:
+    <a href="http://asp.net" class="btn btn-primary btn-lg">Więcej informacji o ASP.NET</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Wprowadzenie</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            ASP.NET MVC to potężne narzędzie służące do budowania złożonych dynamicznych rozwiązań webowych. Tworząc aplikacje oparte o to rozwiązanie
+            utrzymujemy całkowitą kontrolę nad tym co robimy dzięki podziałowi na modele (obiekty i bazy),widoki (statyczny HTML oraz CSS) oraz kontrolery
+            (funkcje i procedury spajające obiekty i widoki w całość). 
         </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Więcej informacji</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Zaimplementowane cechy:</h2>
+        <ul>
+            <li>Synchronizacja z bazą danych</li>
+            <li>Użytkownicy i prawa dostępu</li>
+            <li>Przegląd bazy (wylistowanie)</li>
+            <li>Dodawanie,edycja,usuwanie rekordów.</li>
+            <li>Protokół HTTPS</li>
+        </ul>
     </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+    
 </div>
