--- a/AplikacjaWebowa/Views/Kontakties/Delete.cshtml
+++ b/AplikacjaWebowa/Views/Kontakties/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Usuń</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Jesteś pewien, że chcesz usunąć ten wpis?</h3>
 <div>
-    <h4>Kontakty</h4>
+    <h4>Kontenery</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
