--- a/AplikacjaWebowa/Views/Kontakties/Details.cshtml
+++ b/AplikacjaWebowa/Views/Kontakties/Details.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Szczegóły</h2>
 
 <div>
-    <h4>Kontakty</h4>
+    <h4>Kontenery</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
