--- a/AplikacjaWebowa/Views/Shared/Error.cshtml
+++ b/AplikacjaWebowa/Views/Shared/Error.cshtml
@@ -4,6 +4,6 @@
     ViewBag.Title = "Error";
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<h1 class="text-danger">Błąd0</h1>
+<h2 class="text-danger">Błąd w trakcie przetwarzania żądania.</h2>
 
