--- a/AplikacjaWebowa/Views/Shared/_Layout.cshtml
+++ b/AplikacjaWebowa/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Contact Manager</p>
+            <p>&copy; @DateTime.Now.Year - Grzegorz Budzyn</p>
         </footer>
     </div>
 
