--- a/AplikacjaWebowa/Views/Home/Index.cshtml
+++ b/AplikacjaWebowa/Views/Home/Index.cshtml
@@ -4,22 +4,23 @@
 
 <div class="jumbotron">
     <h1>Witam</h1>
-    <p class="lead">Oto projekt aplikacji serwerowej obsługującej bazę danych. Cała aplikacja bazuję na:
-    <a href="http://asp.net" class="btn btn-primary btn-lg">Więcej informacji o ASP.NET</a></p>
+    <p class="lead">Oto projekt aplikacji serwerowej obsługującej bazę danych. Cała aplikacja została głównie napisana w C#, bazując na ASP.NET.</p>
+    <p>Dodatkowo wspieram się Javascriptem, a dokładnie JQuery i paroma gotowymi rozwiązaniami bootstrapu.</p>
+    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Więcej informacji o ASP.NET</a></p>
 </div>
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-xs-12 col-md-6">
         <h2>Wprowadzenie</h2>
         <p>
             ASP.NET MVC to potężne narzędzie służące do budowania złożonych dynamicznych rozwiązań webowych. Tworząc aplikacje oparte o to rozwiązanie
             utrzymujemy całkowitą kontrolę nad tym co robimy dzięki podziałowi na modele (obiekty i bazy),widoki (statyczny HTML oraz CSS) oraz kontrolery
-            (funkcje i procedury spajające obiekty i widoki w całość). 
+            (funkcje i procedury spajające obiekty i widoki w całość).
         </p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Więcej informacji</a></p>
     </div>
-    <div class="col-md-4">
-        <h2>Zaimplementowane cechy:</h2>
+    <div class="col-xs-12 col-md-6">
+        <h2>Zaimplementowane cechy</h2>
         <ul>
             <li>Synchronizacja z bazą danych</li>
             <li>Użytkownicy i prawa dostępu</li>
