--- a/AplikacjaWebowa/Views/Account/ConfirmEmail.cshtml
+++ b/AplikacjaWebowa/Views/Account/ConfirmEmail.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewBag.Title = "Confirm Email";
+    ViewBag.Title = "Potwierdź adres twojej skrzynki";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 <div>
     <p>
         Dziękuję za potwierdzenie maila. Proszę @Html.ActionLink("Kliknij tutaj aby się zalogować", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
