--- a/AplikacjaWebowa/Views/Account/ForgotPassword.cshtml
+++ b/AplikacjaWebowa/Views/Account/ForgotPassword.cshtml
@@ -5,7 +5,7 @@
 
 <h2>@ViewBag.Title.</h2>
 
-@using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("Hasło utracone", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
     <h4>Wprowadź adres Email</h4>
@@ -19,7 +19,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Email Link" />
+            <input type="submit" class="btn btn-default" value="Wyślij link" />
         </div>
     </div>
 }
