--- a/AplikacjaWebowa/Views/Account/SendCode.cshtml
+++ b/AplikacjaWebowa/Views/Account/SendCode.cshtml
@@ -1,20 +1,20 @@
 ﻿@model AplikacjaWebowa.Models.SendCodeViewModel
 @{
-    ViewBag.Title = "Send";
+    ViewBag.Title = "Wyślij";
 }
 
 <h2>@ViewBag.Title.</h2>
 
-@using (Html.BeginForm("SendCode", "Account", new { ReturnUrl = Model.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" })) {
+@using (Html.BeginForm("Wyślij kod", "Account", new { ReturnUrl = Model.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" })) {
     @Html.AntiForgeryToken()
-    @Html.Hidden("rememberMe", @Model.RememberMe)
+    @Html.Hidden("Zapamiętaj", @Model.RememberMe)
     <h4>Wyslij kod weryfikacyjny</h4>
     <hr />
     <div class="row">
         <div class="col-md-8">
             Wybierz swojego dostawcę usługi autoryzacji:
             @Html.DropDownListFor(model => model.SelectedProvider, Model.Providers)
-            <input type="submit" value="Submit" class="btn btn-default" />
+            <input type="submit" value="Zaakceptuj" class="btn btn-default" />
         </div>
     </div>
 }
