--- a/AplikacjaWebowa/Views/Home/About.cshtml
+++ b/AplikacjaWebowa/Views/Home/About.cshtml
@@ -1,7 +1,15 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "Więcej o projekcie";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Warto kiedyś wprowadzić tutaj więcej informacji.</p>
+
+<h2>Zaimplementowane cechy</h2>
+<ul>
+    <li>Synchronizacja z bazą danych</li>
+    <li>Użytkownicy i prawa dostępu</li>
+    <li>Przegląd bazy (wylistowanie)</li>
+    <li>Dodawanie,edycja,usuwanie rekordów.</li>
+    <li>Protokół HTTPS</li>
+</ul>
