--- a/AplikacjaWebowa/Views/Home/Index.cshtml
+++ b/AplikacjaWebowa/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Strona domowa";
 }
 
 <div class="jumbotron">
@@ -20,13 +20,9 @@
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Więcej informacji</a></p>
     </div>
     <div class="col-xs-12 col-md-6">
-        <h2>Zaimplementowane cechy</h2>
+        <h2>Zadania</h2>
         <ul>
-            <li>Synchronizacja z bazą danych</li>
-            <li>Użytkownicy i prawa dostępu</li>
-            <li>Przegląd bazy (wylistowanie)</li>
-            <li>Dodawanie,edycja,usuwanie rekordów.</li>
-            <li>Protokół HTTPS</li>
+            <li>Spolszczyć AccountViewModels albo jakoś to obejść</li>
         </ul>
     </div>
     
