--- a/AplikacjaWebowa/Views/Kontakties/Details.cshtml
+++ b/AplikacjaWebowa/Views/Kontakties/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AplikacjaWebowa.Models.Kontakty
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Szczegóły";
 }
 
 <h2>Szczegóły</h2>
@@ -61,6 +61,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.KontaktyId }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Edycja", "Edit", new { id = Model.KontaktyId }) |
+    @Html.ActionLink("Powrót do listy", "Index")
 </p>
