--- a/AplikacjaWebowa/Views/Kontakties/Index.cshtml
+++ b/AplikacjaWebowa/Views/Kontakties/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<AplikacjaWebowa.Models.Kontakty>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Lista";
 }
 
 <h2>Lista</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Utwórz nowy rekord", "Create")
 </p>
 <table class="table">
     <tr>
@@ -53,9 +53,9 @@
             @Html.DisplayFor(modelItem => item.Email)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.KontaktyId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.KontaktyId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.KontaktyId })
+            @Html.ActionLink("Edycja", "Edit", new { id=item.KontaktyId }) |
+            @Html.ActionLink("Szczegóły", "Details", new { id=item.KontaktyId }) |
+            @Html.ActionLink("Usuń", "Delete", new { id=item.KontaktyId })
         </td>
     </tr>
 }
