--- a/AplikacjaWebowa/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/AplikacjaWebowa/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,9 +1,9 @@
 ﻿@model AplikacjaWebowa.Models.ExternalLoginConfirmationViewModel
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "Rejestracja";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>Połącz się za pomocą twojego konta @ViewBag.LoginProvider .</h3>
+<h2>@ViewBag.Title</h2>
+<h3>Połącz się za pomocą twojego konta @ViewBag.LoginProvider</h3>
 
 @using (Html.BeginForm("ExternalLoginConfirmation", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
@@ -25,7 +25,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
+            <input type="submit" class="btn btn-default" value="Rejestracja" />
         </div>
     </div>
 }
