--- a/AplikacjaWebowa/Views/Account/ExternalLoginFailure.cshtml
+++ b/AplikacjaWebowa/Views/Account/ExternalLoginFailure.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewBag.Title = "Login Failure";
+    ViewBag.Title = "Logowanie nieudane";
 }
 
 <hgroup>
     <h2>@ViewBag.Title.</h2>
-    <h3 class="text-danger">Logowanie zakończyło się niepowowdzeniem.</h3>
+    <h3 class="text-danger">Logowanie zakończyło się niepowowdzeniem. Spróbuj ponownie.</h3>
 </hgroup>
