--- a/AplikacjaWebowa/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/AplikacjaWebowa/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Forgot Password Confirmation";
+    ViewBag.Title = "Hasło utracone - potwierdź";
 }
 
 <hgroup class="title">
