--- a/AplikacjaWebowa/Views/Account/Register.cshtml
+++ b/AplikacjaWebowa/Views/Account/Register.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AplikacjaWebowa.Models.RegisterViewModel
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "Rejestracja";
 }
 
 <h2>@ViewBag.Title.</h2>
