--- a/AplikacjaWebowa/Views/Account/ResetPassword.cshtml
+++ b/AplikacjaWebowa/Views/Account/ResetPassword.cshtml
@@ -1,11 +1,11 @@
 ﻿@model AplikacjaWebowa.Models.ResetPasswordViewModel
 @{
-    ViewBag.Title = "Reset password";
+    ViewBag.Title = "Restart hasła";
 }
 
 <h2>@ViewBag.Title.</h2>
 
-@using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("Restart hasła", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
     <h4>Zresetuj swoje hasło</h4>
@@ -32,7 +32,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Reset" />
+            <input type="submit" class="btn btn-default" value="Zresetuj" />
         </div>
     </div>
 }
