--- a/AplikacjaWebowa/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/AplikacjaWebowa/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Reset password confirmation";
+    ViewBag.Title = "Restart hasła - potwierdzenie";
 }
 
 <hgroup class="title">
