--- a/AplikacjaWebowa/Views/Account/VerifyCode.cshtml
+++ b/AplikacjaWebowa/Views/Account/VerifyCode.cshtml
@@ -1,14 +1,14 @@
 ﻿@model AplikacjaWebowa.Models.VerifyCodeViewModel
 @{
-    ViewBag.Title = "Verify";
+    ViewBag.Title = "Weryfikacja";
 }
 
 <h2>@ViewBag.Title.</h2>
 
-@using (Html.BeginForm("VerifyCode", "Account", new { ReturnUrl = Model.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" })) {
+@using (Html.BeginForm("Weryfikacja kodu", "Account", new { ReturnUrl = Model.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" })) {
     @Html.AntiForgeryToken()
-    @Html.Hidden("provider", @Model.Provider)
-    @Html.Hidden("rememberMe", @Model.RememberMe)
+    @Html.Hidden("Dostawca", @Model.Provider)
+    @Html.Hidden("Zapamiętaj", @Model.RememberMe)
     <h4>Wprowadź kod do weryfikacji</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
@@ -28,7 +28,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Submit" />
+            <input type="submit" class="btn btn-default" value="Zaakceptuj" />
         </div>
     </div>
 }
