--- a/AplikacjaWebowa/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/AplikacjaWebowa/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -8,8 +8,7 @@
     if (loginProviders.Count() == 0) {
         <div>
             <p>
-                Istnieje możliwość skonfigurowania dostępu do social media. Jak zostanie czs to się tym zajmę. Link do poradnika dotyczącego implementacji <a href="http://go.microsoft.com/fwlink/?LinkId=403804">LINK</a>
-                for details on setting up this ASP.NET application to support logging in via external services.
+                Istnieje możliwość skonfigurowania dostępu do social media. Jak zostanie czas to się tym zajmę. Link do poradnika dotyczącego implementacji <a href="http://go.microsoft.com/fwlink/?LinkId=403804">LINK</a>
             </p>
         </div>
     }
@@ -19,7 +18,7 @@
             <div id="socialLoginList">
                 <p>
                     @foreach (AuthenticationDescription p in loginProviders) {
-                        <button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Zaloguj się używając @p.Caption account">@p.AuthenticationType</button>
+                        <button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Zaloguj się używając @p.Caption konta">@p.AuthenticationType</button>
                     }
                 </p>
             </div>
