--- a/AplikacjaWebowa/Views/Cm/Create.cshtml
+++ b/AplikacjaWebowa/Views/Cm/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model AplikacjaWebowa.Models.Kontakty
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Tworzenie";
 }
 
-<h2>Create</h2>
+<h2>Stwórz element</h2>
 
 
 @using (Html.BeginForm()) 
@@ -64,7 +64,7 @@
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Stwórz" class="btn btn-default" />
             </div>
         </div>
     </div>
