--- a/AplikacjaWebowa/Views/Cm/Details.cshtml
+++ b/AplikacjaWebowa/Views/Cm/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model AplikacjaWebowa.Models.Kontakty
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Szczegóły";
 }
 
-<h2>Szczegóły</h2>
+<h2>@ViewBag.Title</h2>
 
 <div>
     <h4>Kontenery</h4>
@@ -61,6 +61,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.KontaktyId }) |
+    @Html.ActionLink("Edytuj", "Edit", new { id = Model.KontaktyId }) |
     @Html.ActionLink("Powrót do listy", "Index")
 </p>
