--- a/AplikacjaWebowa/Views/Kontakties/Create.cshtml
+++ b/AplikacjaWebowa/Views/Kontakties/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model AplikacjaWebowa.Models.Kontakty
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Utwórz";
 }
 
-<h2>Utwórz</h2>
+<h2>@ViewBag.Title - rekord</h2>
 
 
 @using (Html.BeginForm()) 
@@ -65,14 +65,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Utwórz" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Powrót do listy", "Index")
 </div>
 
 @section Scripts {
