--- a/AplikacjaWebowa/Views/Kontakties/Delete.cshtml
+++ b/AplikacjaWebowa/Views/Kontakties/Delete.cshtml
@@ -1,10 +1,10 @@
 ﻿@model AplikacjaWebowa.Models.Kontakty
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Usuń";
 }
 
-<h2>Usuń</h2>
+<h2>@ViewBag.Title - rekord</h2>
 
 <h3>Jesteś pewien, że chcesz usunąć ten wpis?</h3>
 <div>
@@ -65,8 +65,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Usuń" class="btn btn-default" /> |
+            @Html.ActionLink("Powrót do listy", "Index")
         </div>
     }
 </div>
