--- a/AplikacjaWebowa/Views/Manage/AddPhoneNumber.cshtml
+++ b/AplikacjaWebowa/Views/Manage/AddPhoneNumber.cshtml
@@ -1,11 +1,11 @@
 ﻿@model AplikacjaWebowa.Models.AddPhoneNumberViewModel
 @{
-    ViewBag.Title = "Phone Number";
+    ViewBag.Title = "Numer telefonu";
 }
 
 <h2>@ViewBag.Title.</h2>
 
-@using (Html.BeginForm("AddPhoneNumber", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("Dodaj numer telefonu", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
     <h4>Dodaj numer telefonu</h4>
@@ -19,7 +19,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Submit" />
+            <input type="submit" class="btn btn-default" value="Zaakceptuj" />
         </div>
     </div>
 }
