--- a/AplikacjaWebowa/Views/Manage/Index.cshtml
+++ b/AplikacjaWebowa/Views/Manage/Index.cshtml
@@ -1,40 +1,36 @@
 ﻿@model AplikacjaWebowa.Models.IndexViewModel
 @{
-    ViewBag.Title = "Manage";
+    ViewBag.Title = "Zarządzaj";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 
 <p class="text-success">@ViewBag.StatusMessage</p>
 <div>
-    <h4>Change your account settings</h4>
+    <h4>Zmień ustawienia Twojego konta</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>Password:</dt>
+        <dt>Hasło</dt>
         <dd>
             [
             @if (Model.HasPassword)
             {
-                @Html.ActionLink("Change your password", "ChangePassword")
+                @Html.ActionLink("Zmień swoje hasło", "ChangePassword")
             }
             else
             {
-                @Html.ActionLink("Create", "SetPassword")
+                @Html.ActionLink("Utwórz hasło", "SetPassword")
             }
             ]
         </dd>
-        <dt>External Logins:</dt>
+        <dt>Zewnętrzne sposoby logowania:</dt>
         <dd>
             @Model.Logins.Count [
             @Html.ActionLink("Manage", "ManageLogins") ]
         </dd>
         @*
-            Phone Numbers can used as a second factor of verification in a two-factor authentication system.
-             
-             See <a href="http://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
-                for details on setting up this ASP.NET application to support two-factor authentication using SMS.
-             
-             Uncomment the following block after you have set up two-factor authentication
+            Logowanie za pomoca telefonu: "http://go.microsoft.com/fwlink/?LinkId=403804"
+              
         *@
         @*  
             <dt>Phone Number:</dt>
@@ -53,11 +49,10 @@
                 ]
             </dd>
         *@
-        <dt>Two-Factor Authentication:</dt>
+        <dt>Social Media:</dt>
         <dd>
             <p>
-                There are no two-factor authentication providers configured. See <a href="http://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
-                for details on setting up this ASP.NET application to support two-factor authentication.
+                Więcej informacji na <a href="http://go.microsoft.com/fwlink/?LinkId=403804">http://go.microsoft.com/fwlink/?LinkId=403804</a>
             </p>
             @*@if (Model.TwoFactor)
                 {
