--- a/AplikacjaWebowa/Views/Manage/SetPassword.cshtml
+++ b/AplikacjaWebowa/Views/Manage/SetPassword.cshtml
@@ -1,19 +1,18 @@
 ﻿@model AplikacjaWebowa.Models.SetPasswordViewModel
 @{
-    ViewBag.Title = "Create Password";
+    ViewBag.Title = "Stwórz hasło";
 }
 
 <h2>@ViewBag.Title.</h2>
 <p class="text-info">
-    You do not have a local username/password for this site. Add a local
-    account so you can log in without an external login.
+    Nie posiadasz lokalnego konta. Dodaj konto aby zalogować się za pomocą innych opcji.
 </p>
 
 @using (Html.BeginForm("SetPassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
 
-    <h4>Create Local Login</h4>
+    <h4>Stwórz lokalne konto</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
@@ -30,7 +29,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Set password" class="btn btn-default" />
+            <input type="submit" value="Ustaw hasło" class="btn btn-default" />
         </div>
     </div>
 }
