--- a/AplikacjaWebowa/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/AplikacjaWebowa/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,15 +1,15 @@
 ﻿@model AplikacjaWebowa.Models.VerifyPhoneNumberViewModel
 @{
-    ViewBag.Title = "Verify Phone Number";
+    ViewBag.Title = "Zweryfykuj numer telefonu";
 }
 
 <h2>@ViewBag.Title.</h2>
 
-@using (Html.BeginForm("VerifyPhoneNumber", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("Weryfikacja numeru", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    @Html.Hidden("phoneNumber", @Model.PhoneNumber)
-    <h4>Enter verification code</h4>
+    @Html.Hidden("Numer telefonu", @Model.PhoneNumber)
+    <h4>Wpisz kod weryfikacji</h4>
     <h5>@ViewBag.Status</h5>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
@@ -21,7 +21,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Submit" />
+            <input type="submit" class="btn btn-default" value="Weryfikacja" />
         </div>
     </div>
 }
