--- a/AplikacjaWebowa/Views/Shared/Error.cshtml
+++ b/AplikacjaWebowa/Views/Shared/Error.cshtml
@@ -1,9 +1,9 @@
 ﻿@model System.Web.Mvc.HandleErrorInfo
 
 @{
-    ViewBag.Title = "Error";
+    ViewBag.Title = "Błąd";
 }
 
-<h1 class="text-danger">Błąd0</h1>
+<h1 class="text-danger">Błąd</h1>
 <h2 class="text-danger">Błąd w trakcie przetwarzania żądania.</h2>
 
